--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "minigame",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://simone1052.github.io/minigame",
+  "homepage": "https://simone1052.github.io/minigameLdM1024",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
